optimised the code
No longer save as html

rename files

port is in config file

changed the subfolder

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "img_description":"",
     "img_site_name":"",
     "img_title":"",
-    "img_secret":""
+    "img_secret":"",
+    "port":"8069"
 }
