url added to config file

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
     "img_site_name":"",
     "img_title":"",
     "img_secret":"",
-    "port":"8069"
+    "port":"8069",
+    "url":"http://local.host"
 }
