--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "embed_enabled": "false",
     "author_enabled": "true",
     "img_site":"http://local.host",
+    "fake_url":"http://local.host",
     "img_description":"the last text to show up",
     "img_site_name":"small gray text on top of the embed",
     "img_title":"The text that will redirect to the image",
